<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView

        style="@style/CardView.Light"
        android:layout_width="fill_parent"
        android:layout_height="40sp"
        android:layout_marginTop="20sp"
        app:cardCornerRadius="2sp"
        app:cardElevation="4sp"


        >

        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:paddingTop="5dp"
            android:text="@string/donations__google_android_market"
            android:textColor="#ff212121" />


    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <Spinner
            android:id="@+id/donations__google_android_market_spinner"
            style="@android:style/Widget.DropDownItem.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/donations__google_android_market_text" />

        <Button
            android:id="@+id/donations__google_android_market_donate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/donations__google_android_market_donate_button" />
    </LinearLayout>

</LinearLayout>